Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Description
This issue was created by maloo for S Buisson <sbuisson@ddn.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/553b0d87-7bd4-4400-adde-cd0592f94c92
test_80b failed with the following error:
trevis-50vm5 crashed during sanityn test_80b
The stack trace is:
[20668.091492] LustreError: 4082:0:(lod_object.c:383:lod_striped_lookup()) ASSERTION( lo->ldo_dir_stripe_count > 0 ) failed: [20668.093431] LustreError: 4082:0:(lod_object.c:383:lod_striped_lookup()) LBUG [20668.094873] Pid: 4082, comm: mdt00_000 3.10.0-1127.el7_lustre.x86_64 #1 SMP Wed May 27 23:19:34 UTC 2020 [20668.096382] Call Trace: [20668.096853] [<ffffffffc08581dc>] libcfs_call_trace+0x8c/0xc0 [libcfs] [20668.098028] [<ffffffffc085828c>] lbug_with_loc+0x4c/0xa0 [libcfs] [20668.099096] [<ffffffffc163e0dd>] lod_striped_lookup+0x7fd/0x8e0 [lod] [20668.100584] [<ffffffffc16bc65b>] __mdd_lookup.isra.18+0x2ab/0x450 [mdd] [20668.101765] [<ffffffffc16be68c>] mdd_is_parent+0x10c/0x520 [mdd] [20668.102926] [<ffffffffc16bec77>] mdd_is_subdir+0x1d7/0x210 [mdd] [20668.104056] [<ffffffffc1541a07>] mdt_reint_rename+0x377/0x2780 [mdt] [20668.105298] [<ffffffffc154cf03>] mdt_reint_rec+0x83/0x210 [mdt] [20668.106448] [<ffffffffc1525970>] mdt_reint_internal+0x710/0xae0 [mdt] [20668.107549] [<ffffffffc1530d47>] mdt_reint+0x67/0x140 [mdt] [20668.108513] [<ffffffffc11fec0a>] tgt_request_handle+0x96a/0x1640 [ptlrpc] [20668.110045] [<ffffffffc11a0216>] ptlrpc_server_handle_request+0x256/0xb10 [ptlrpc] [20668.111377] [<ffffffffc11a4744>] ptlrpc_main+0xbb4/0x1550 [ptlrpc] [20668.112459] [<ffffffffbb6c6691>] kthread+0xd1/0xe0 [20668.113328] [<ffffffffbbd92d37>] ret_from_fork_nospec_end+0x0/0x39 [20668.114631] [<ffffffffffffffff>] 0xffffffffffffffff [20668.115785] Kernel panic - not syncing: LBUG [20668.116531] CPU: 1 PID: 4082 Comm: mdt00_000 Kdump: loaded Tainted: P OE ------------ 3.10.0-1127.el7_lustre.x86_64 #1 [20668.118386] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanityn test_80b - trevis-50vm5 crashed during sanityn test_80b
Landed for 2.14